# python-project-51

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint.yml  tests.yml
page-loader/: cli.py  page_loader.py
page_loader/: cli.py  directory_creator.py  html.py  html_editor.py  html_handler.py  logger.py  names_maker.py  page.html  page_loader.py  url.py
page_loader/scripts/: __init__.py  page_loader.py
tests/: test_page_loader.py  test_pagee_loader.py
tests/fixtures/: edited.html  expected.html
