[tool.poetry]
name = "hexlet-code"
version = "0"
description = ""
authors = ["notsoyoungg <p.sergey1997@mail.ru>"]
packages = [
	{ include = 'page_loader' },
]


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pytest = "^7.1.3"
bs4 = "^0.0.1"
validators = "^0.20.0"
progress = "^1.6"

[tool.poetry.scripts]
page-loader = 'page_loader.scripts.page_loader:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
